--- a/index.html
+++ b/index.html
@@ -59,9 +59,9 @@
       var buildUrl = "Build";
       var loaderUrl = buildUrl + "/BUILDS.loader.js";
       var config = {
-        dataUrl: buildUrl + "/BUILDS.data",
-        frameworkUrl: buildUrl + "/BUILDS.framework.js",
-        codeUrl: buildUrl + "/BUILDS.wasm",
+        dataUrl: buildUrl + "/BUILDS.data.br",
+        frameworkUrl: buildUrl + "/BUILDS.framework.js.br",
+        codeUrl: buildUrl + "/BUILDS.wasm.br",
         streamingAssetsUrl: "StreamingAssets",
         companyName: "DefaultCompany",
         productName: "Project-Mostly-Introverts",
