--- a/index.html
+++ b/index.html
@@ -57,11 +57,11 @@
       }
 
       var buildUrl = "Build";
-      var loaderUrl = buildUrl + "/BUILDS.loader.js";
+      var loaderUrl = buildUrl + "/BUILDSSSSSSSSSSSSSSSS.loader.js";
       var config = {
-        dataUrl: buildUrl + "/BUILDS.data",
-        frameworkUrl: buildUrl + "/BUILDS.framework.js",
-        codeUrl: buildUrl + "/BUILDS.wasm",
+        dataUrl: buildUrl + "/BUILDSSSSSSSSSSSSSSSS.data",
+        frameworkUrl: buildUrl + "/BUILDSSSSSSSSSSSSSSSS.framework.js",
+        codeUrl: buildUrl + "/BUILDSSSSSSSSSSSSSSSS.wasm",
         streamingAssetsUrl: "StreamingAssets",
         companyName: "DefaultCompany",
         productName: "Project-Mostly-Introverts",
